--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@significa/directus-extension-raw-body",
   "version": "0.0.1-development",
   "repository": "github:significa/directus-extension-raw-body",
+  "bugs": {
+    "url": "https://github.com/significa/directus-extension-raw-body/issues"
+  },
+  "homepage": "https://github.com/significa/directus-extension-raw-body",
   "author": "Significa <development@significa.co>",
   "publishConfig": {
     "access": "public"
@@ -9,25 +13,29 @@
   "keywords": [
     "directus",
     "directus-extension",
-    "directus-custom-hook"
+    "directus-custom-hook",
+    "express"
   ],
   "directus:extension": {
     "type": "hook",
     "path": "dist/index.js",
     "source": "src/index.ts",
-    "host": "^9.21.2"
+    "host": "^9.22.4"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "directus-extension build",
-    "dev": "directus-extension build -w --no-minify",
+    "build": "tsc && directus-extension build",
+    "dev": "tsc && directus-extension build -w --no-minify",
     "lint": "prettier 'src/**/*.+(ts|tsx|js|jsx|json|yml|yaml|md|mdx)' --check",
     "format": "prettier 'src/**/*.+(ts|tsx|js|jsx|json|yml|yaml|md|mdx)' --write"
   },
   "devDependencies": {
-    "@directus/extensions-sdk": "9.21.2",
-    "@significa/prettier-config": "^2.0.0",
-    "@types/express": "^4.17.15",
-    "@types/node": "^18.11.15",
-    "typescript": "^4.9.4"
+    "@directus/extensions-sdk": "9.22.4",
+    "@significa/prettier-config": "2.0.0",
+    "@types/express": "4.17.15",
+    "@types/node": "18.11.18",
+    "typescript": "4.9.4"
   }
 }
