--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,11 @@
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "declaration": true,
+    "emitDeclarationOnly": true,
   },
   "include": ["./src/**/*.ts"]
 }
+
